	Document.
	(w3m-fontify-textareas): Put `w3m-form-file-name' property.
	(w3m-form-textarea-files, w3m-form-textarea-post-files): New
	buffer local variable.
	(w3m-form-parse-and-fontify): Set `w3m-form-textarea-files'. Put
	`w3m-form-file-name' property on the form of textarea.
	(w3m-form-input-textarea): Use same textarea buffer if exist.
	Don't ask user if don't modify its area.
	Visible the editted text when ask user.	Guard against 'C-g'.
	Added `w3m-form-textarea-file-cleanup' to hook as
	`kill-emacs-hook'
	(w3m-form-textarea-file-cleanup): Remove myself from
	`kill-emacs-hook'.
	(w3m-form-textarea-files-remove): New function.
	(w3m-form-submit-get-textarea-files): Ditto.
	(w3m-form-submit): Set `w3m-form-textarea-post-files' for removing
	files.

2005-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-prepare-article-release):
	Remove print button.

2005-01-06  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-nikkei.el (shimbun-nikkei-group-table): Add kansai,
	it, kokunai, markets, kawase, kinri, ft, dj, ngyoseki and gyoseki
	groups.
	(shimbun-nikkei-get-headers-kansai): New function.
	(shimbun-nikkei-get-headers-it): New function.
	(shimbun-nikkei-get-headers-markets): New function.
	(shimbun-nikkei-get-headers-kawase): New function.
	(shimbun-nikkei-get-headers-kinri): New function.
	(shimbun-nikkei-get-headers-ft): New function.
	(shimbun-nikkei-get-headers-dj): New function.
	(shimbun-nikkei-get-headers-gyoseki): New function.
	(shimbun-nikkei-prepare-article-kansai): New function.
	(shimbun-nikkei-prepare-article-default3): New function.
	(shimbun-nikkei-prepare-article-release): Improve regexps.

2005-01-05  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Follow
	the change of ITmedia Games.

2005-01-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* doc/Makefile.in (.texi.info): Set LC_ALL=C.

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers-report): Make
	Date header.